@@ -10,14 +10,21 @@
             <label>Sound output method to use</label>
             <whatsthis>Select the sound output plugin ("sink"). Their availability depends on the system configuration.</whatsthis>
         </entry>
+        <entry key="Use Custom Sound Device" type="Bool">
+            <label>Don't use the autodetected audiosink sound device</label>
+            <default>false</default>
+            <whatsthis>When enabled, uses user-specified sound device for audiosink.</whatsthis>
+        </entry>
         <entry key="Sound Device" type="String">
             <label>Sound output device to use</label>
             <whatsthis>Select the sound output device. this is useful for gstreamer engine sinks</whatsthis>
         </entry>
-        <entry key="Custom Sound Device" type="Bool">
-            <label>Don't use the autodetected audiosink sound device</label>
+        <entry key="Use Custom Output Params" type="Bool">
+            <label>Use custom parameters for output sink.</label>
             <default>false</default>
-            <whatsthis>When enabled, uses user-specified sound device for audiosink.</whatsthis>
+        </entry>
+        <entry key="Output Params" type="String">
+            <label>The custom sink parameters.</label>
         </entry>
         <entry key="Thread Priority" type="Int">
             <label>Priority of GStreamer pipeline thread</label>
