@@ -29,13 +29,18 @@ GstConfigDialog::GstConfigDialog( GstEngine* engine )
     if ( outputs.contains( GstConfig::soundOutput() ) )
         m_view->kComboBox_output->setCurrentText( GstConfig::soundOutput() );
     
-    m_view->checkBox1->setChecked( GstConfig::customSoundDevice() );
-    m_view->kLineEdit_device->setText( GstConfig::soundDevice() );
+    m_view->checkBox_outputDevice->setChecked( GstConfig::useCustomSoundDevice() );
+    m_view->kLineEdit_outputDevice->setText( GstConfig::soundDevice() );
 
+    m_view->checkBox_outputParams->setChecked( GstConfig::useCustomOutputParams() );
+    m_view->kLineEdit_outputParams->setText( GstConfig::outputParams() );
+    
     // Connections for modification check
     connect( m_view->kComboBox_output, SIGNAL( activated( int ) ), this, SIGNAL( settingsChanged() ) );
-    connect( m_view->checkBox1, SIGNAL( toggled( bool ) ), this, SIGNAL( settingsChanged() ) );
-    connect( m_view->kLineEdit_device, SIGNAL( textChanged( const QString& ) ), this, SIGNAL( settingsChanged() ) );
+    connect( m_view->checkBox_outputDevice, SIGNAL( toggled( bool ) ), this, SIGNAL( settingsChanged() ) );
+    connect( m_view->kLineEdit_outputDevice, SIGNAL( textChanged( const QString& ) ), this, SIGNAL( settingsChanged() ) );
+    connect( m_view->checkBox_outputParams, SIGNAL( toggled( bool ) ), this, SIGNAL( settingsChanged() ) );
+    connect( m_view->kLineEdit_outputParams, SIGNAL( textChanged( const QString& ) ), this, SIGNAL( settingsChanged() ) );
 }
 
 
@@ -52,9 +57,11 @@ GstConfigDialog::~GstConfigDialog()
 bool
 GstConfigDialog::hasChanged() const
 {
-    return GstConfig::soundOutput()       != m_view->kComboBox_output->currentText() ||
-           GstConfig::customSoundDevice() != m_view->checkBox1->isChecked() ||
-           GstConfig::soundDevice()       != m_view->kLineEdit_device->text();
+    return GstConfig::soundOutput()           != m_view->kComboBox_output->currentText() ||
+           GstConfig::useCustomSoundDevice()  != m_view->checkBox_outputDevice->isChecked() ||
+           GstConfig::soundDevice()           != m_view->kLineEdit_outputDevice->text() ||
+           GstConfig::useCustomOutputParams() != m_view->checkBox_outputParams->isChecked() ||
+           GstConfig::outputParams()          != m_view->kLineEdit_outputParams->text();
 }
 
 
@@ -75,8 +82,10 @@ GstConfigDialog::save() //SLOT
     kdDebug() << k_funcinfo << endl;
     
     GstConfig::setSoundOutput( m_view->kComboBox_output->currentText() );
-    GstConfig::setCustomSoundDevice( m_view->checkBox1->isChecked() );
-    GstConfig::setSoundDevice( m_view->kLineEdit_device->text() );
+    GstConfig::setUseCustomSoundDevice( m_view->checkBox_outputDevice->isChecked() );
+    GstConfig::setSoundDevice( m_view->kLineEdit_outputDevice->text() );
+    GstConfig::setUseCustomOutputParams( m_view->checkBox_outputParams->isChecked() );
+    GstConfig::setOutputParams( m_view->kLineEdit_outputParams->text() );
 }
 
 
