@@ -4,6 +4,7 @@ amaroK ChangeLog
 
 
 VERSION 1.1:
+  ADD: GstEngine: Support for custom output plugin parameters. (BR 83949)
   ADD: CoverManager - for downloading and managing album cover images.
   CHG: Refactored engine plugin interface. Each engine can now provide specific
        configuration GUIs.
